--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "egg": "^2.2.1",
     "egg-scripts": "^2.5.0",
+    "egg-view-nunjucks": "^2.2.0",
     "exceljs": "^1.7.0"
   },
   "devDependencies": {
